kubernetes/apps/network/external-services/app/technitium/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: technitium
subsets:
  - addresses:
      - ip: "${TECHNITIUM_IP}"
    ports:
      - port: 5380
        protocol: TCP
