kubernetes/apps/network/external-services/app/technitium/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: technitium
spec:
  type: ClusterIP
  ports:
      protocol: TCP
      port: 5380
      targetPort: 5380
